test/fail_compilation/fail109.d

enum Bool : bool {
        False,
        True,
        Unknown
}

